# miniclaw

./: README.md  pyproject.toml  requirements.txt
miniclaw/: __main__.py  bot.py
miniclaw/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  runner.py  skills.py
miniclaw/agent/cron/: __init__.py  models.py  scheduler.py
miniclaw/agent/tools/: __init__.py  base.py  cron_tool.py  exec_tool.py  memory_tool.py  permission.py  registry.py  schema.py  secure_tool.py  skill_creator.py  web_tool.py
miniclaw/bus/: queue.py
miniclaw/cli/: commands.py
miniclaw/config/: loader.py
miniclaw/providers/: base.py  openai_compat_provider.py  requests_compat_provider.py
miniclaw/security/: network.py
miniclaw/server/: start_server.py  webhook.py
miniclaw/server/static/: index.html
miniclaw/server/static/css/: style.css
miniclaw/server/static/js/: app.js
miniclaw/session/: manager.py
miniclaw/skills/: README.md  __init__.py
miniclaw/skills/builtin/weather/: SKILL.md
miniclaw/test/: test_autocompact.py  test_compression_small.py  test_dream.py  test_tiktoken.py  test_tools.py
