[project]
name = "miniclaw"
version = "0.1.0"
description = "Ultra-Lightweight Personal AI Agent"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "pydantic-settings",
    "loguru",
    "tiktoken",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"